# marv32

./: .gitignore  Makefile  cabal.project  clashv32.cabal  hie.yaml  marv32.cabal
app/: Makefile  bare.x  fib.c  fib_hw.c  start.S  start.c  util.c  util.h
src/: CPU.hs  System.hs  Utils.hs
src/CPU/: ALU.hs  DataMem.hs  Decode.hs  Instruction.hs  Machine.hs  Memory.hs  Pipeline.hs  RegFile.hs  Trace.hs  Types.hs
src/CPU/Instruction/: Action.hs  Format.hs
src/Periph/: IO.hs  Memory.hs
src/Utils/: CreateRomFile4.hs  Files.hs  Maybe.hs
tests/: doctests.hs
