cabal-version:       2.4
name:                marv32
version:             0.1
license:             BSD-2-Clause
author:              Illia Ostapyshyn <ilya.ostapyshyn@gmail.com>
maintainer:          Illia Ostapyshyn <ilya.ostapyshyn@gmail.com>

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat -Wno-name-shadowing -Wno-incomplete-patterns
    -Wno-type-defaults -Wno-missing-signatures
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper

    -- Strict annotations - while sometimes preventing space leaks - trigger
    -- optimizations Clash can't deal with. See:
    --
    --    https://github.com/clash-lang/clash-compiler/issues/2361
    --
    -- These flags disables these optimizations. Note that the fields will
    -- remain strict.
    -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields

    -fwrite-ide-info
    -hiedir=.hie
  build-depends:
    base,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.6.4 && < 1.8,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,

    template-haskell,
    bytestring,
    data-default

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Utils.Maybe
    Utils.Files
    CPU.Machine
    CPU.Instruction
    CPU.Instruction.Format
    CPU.Instruction.Action
    CPU.Memory
    CPU.Pipeline
    CPU.Trace
    Periph.IO
    Periph.Memory
    System
  other-modules:
  default-language: Haskell2010

executable create_rom
  main-is: Utils/CreateRomFile4.hs
  hs-source-dirs: src
  other-modules:
    Utils.Files
  Build-Depends: base, filepath, directory, bytestring,
                 template-haskell, clash-prelude

-- Builds the executable 'clash', with marv32 project in scope
executable clash
  main-is: bin/Clash.hs
  default-language: Haskell2010
  Build-Depends: base, clash-ghc, marv32
  if !os(Windows)
    ghc-options: -dynamic

-- Builds the executable 'clashi', with marv32 project in scope
executable clashi
  main-is: bin/Clashi.hs
  default-language: Haskell2010
  if !os(Windows)
    ghc-options: -dynamic
  build-depends: base, clash-ghc, marv32
